hphp/hack/test/typecheck/invalid_php7_anon_fn.php.legacy_decl.exp
File "invalid_php7_anon_fn.php", line 4, characters 20-20:
Bad signature: use(...) should occur after the type (Parsing[1002])
