hphp/hack/test/typecheck/invalid_php7_anon_fn.php
<?hh // partial

function f(): int {
  function() use (): int {
    return 1;
  };
  return 1;
}
